1章修正完成

--- a/MT/M2sato.bib
+++ b/MT/M2sato.bib
@@ -73,10 +73,19 @@
   year={1986},
   publisher={SIAM}
 }
-@article{kuhn2010local,
-  title={Local computation: Lower and upper bounds},
-  author={Kuhn, Fabian and Moscibroda, Thomas and Wattenhofer, Roger},
-  journal={arXiv preprint arXiv:1011.5470},
-  year={2010}
+@inproceedings{rozhovn2020polylogarithmic,
+  title={Polylogarithmic-time deterministic network decomposition and distributed derandomization},
+  author={Rozho{\v{n}}, V{\'a}clav and Ghaffari, Mohsen},
+  booktitle={Proceedings of the 52nd Annual ACM SIGACT Symposium on Theory of Computing},
+  pages={350--363},
+  year={2020}
+}
+@inproceedings{balliu2019lower,
+  title={Lower bounds for maximal matchings and maximal independent sets},
+  author={Balliu, Alkida and Brandt, Sebastian and Hirvonen, Juho and Olivetti, Dennis and Rabie, Mika{\"e}l and Suomela, Jukka},
+  booktitle={2019 IEEE 60th Annual Symposium on Foundations of Computer Science (FOCS)},
+  pages={481--497},
+  year={2019},
+  organization={IEEE}
 }
 
