--- a/MT/M2sato.tex
+++ b/MT/M2sato.tex
@@ -68,59 +68,61 @@
 \chapter{はじめに}
 
 \section{研究背景}
-\Izumi{句点と読点は全角の，と．にする}
 分散グラフアルゴリズムとは，計算機を頂点，辺を通信リンクとみなしてネットワークをモデル化したグラフ上において，
 そのネットワーク自身を入力としてグラフに対して定義される諸問題を解く枠組みである．分散アルゴリズムにおける
-代表的なモデルのひとつとして{{\CONGEST}}モデルが存在する．{\CONGEST}モデルにおいて，
+代表的なモデルのひとつとして{{\CONGEST}}モデルが存在する．{\CONGEST}モデルでは，
 各ノードは同期ラウンドに従って実行され，メッセージ交換によって協調動作を行う．
-各ノードは各ラウンドで(i)$b$ビットのメッセージを隣接ノードに送信
+各ノードは各ラウンドで(i)$O(\log n)$ビットのメッセージを隣接ノードに送信
 (ii)隣接ノードからメッセージを受信(iii)内部計算の3つの動作をする．
-特に{\CONGEST}モデルでは$b = O(\log n)$が仮定される．
-{\CONGEST}モデルにおいて，ある1つのノードにグラフ全体のトポロジの情報を集め，そのノード上で
-逐次アルゴリズムを実行するという素朴なアプローチから，任意の問題に対して自明に
-$O (n^{2})$ラウンドの上界を得ることができる.{\CONGEST}モデルにおける下界の証明では，
-下界が$\Omega(n^{2})$ラウンドにどれだけ近づけることができるかに興味がある．
+{\CONGEST}モデルにおいては，ある1つのノードにグラフ全体のトポロジの情報を集め，そのノード上で
+逐次アルゴリズムを実行するという愚直なアプローチにより，任意の問題に対して自明に
+$O (n^{2})$ラウンドの上界を得ることができる．一般に，分散グラフアルゴリズムの計算複雑性に
+おいては，システムの規模，すなわち$n$の値に対して劣線形なラウンド複雑性を持つアルゴリズムを構成できるかどうかに興味がある．逆に，下界の観点からは，$\tilde{Omega}(n)$ラウンドの下界を得ることができるような問題は計算困難な問題として認識され，前述の万能な上界の結果から，
+$\tilde{Omega}(n^2)$ラウンドの下界を持つような問題は「最も難しい」問題ととらえることができる\footnote{\Izumi{$\tilde{\Omega}(\cdot)$の記法の説明を脚注に書いておく}}．
 
-本研究ではグラフ上の最適化問題の一つである，最大独立点集合に注目する．{\CONGEST}モデルにおいて，
-ネットワーク上の最大独立集合あるいはその近似解を発見する数多くの分散グラフアルゴリズムが研究されている．
-%各頂点が隣接していない頂点部分集合を独立集合といい,最大独立集合とは頂点数が最も多い独立集合である.
-大きなサイズの独立集合は経済学，計算生物学，符号理論，実験計画法など様々な分野への応用に用いられる
- \cite{kawarabayashi2019improved} が，そもそも最大独立集合問題はNP完全であり，頂点数$n$に対して
-$n$の多項式時間で解くことは，その近似を含めて絶望的であるとされている．分散グラフアルゴリズムの文脈からは，
-各ノードのローカル計算において指数時間の計算を許した場合における計算ラウンド数の複雑性に関して近年
-議論が進んでおり，最大独立集合の発見あるいはその近似解の発見に対して上界，下界の両面から，いくつかの
-結果が知られている．
-(\Izumi{ここ，具体的にどのような上下界が得られているか説明を入れる})．
-例えば，{\CONGEST}モデルにおいて最大重み付き独立集合の$(1 + \epsilon) \cdot \Delta$-近似
+本研究ではグラフ上の最適化問題の一つである，最大独立点集合問題に注目する．
+逐次計算の文脈において，最大独立点集合問題はグラフ理論における重要な基本問題としてよく知られているが，分散アルゴリズムの分野においても，同問題は一種の近傍頂点との間のリソース競合回避と見なすことができ，数多くの応用が存在する．しかしながら，逐次計算の複雑性理論において，
+最大独立集合問題はNP完全であるのみならず，任意の定数$\epsilon > 0$に対して近似率$O(n^{1-\epsilon})$を達成不可能であることが知られている\cite{XXX}ため，何らかの性能保証を持つ多項式時間アルゴリズムの設計は絶望的である．
+一方で，分散アルゴリズムの分野においては，指数時間のローカル計算を許した{\CONGEST}モデルにおいて，最大独立点集合問題の近似解を求めるためのラウンド複雑性が近年議論されており，上界，下界の両面から，いくつかの
+結果が知られている．具体的には，{\CONGEST}モデルにおいて最大重み付き独立集合の$(1 + \epsilon) \cdot \Delta$-近似
 ($\Delta$は頂点の最大次数) を高確率で$\left(poly(\log \log n)/\epsilon \right)$ラウンドで
 発見するアルゴリズム\cite{kawarabayashi2019improved} や，最大独立集合を発見するアルゴリズムに対する
 $\Omega \left(\frac{n^{2}}{(\log n)^{2}}\right)$ラウンドの下界 \cite{censor2017quadratic}，
 最大独立集合の$(\frac{3}{4} + \epsilon)$-近似を発見するアルゴリズムに対する
 $\Omega \left(\frac{n^{2}}{(\log n)^{3}}\right)$ラウンドの下界 \cite{efron2020beyond} などが知られている．
-逐次アルゴリズムにおける計算困難性から，指数時間を要する内部計算を許容して分散グラフ
-アルゴリズムの複雑性の議論を行うことの妥当性にはやや疑問が残る．
 
 \section{本研究の目的と結果}
-そこで今回，我々は最大独立集合の局所最適解である$k$-極大独立集合
-($k$-Maximal Independet Set， $k$-MIS)について考える．
-\Izumi{$k$－MISはそれほど一般的な概念ではないので，ここにラフな説明ほしい}
-独立集合のうち，$k$個の頂点をその集合から取り除いて独立集合を維持したまま$k + 1$個以上の頂点を
-追加することができないとき，その独立集合を$k$-MISという．
-与えられたグラフ$G=(V, E)$に対する$k$-MISの発見は，自然な局所探索により実現することが可能である．すなわち，
-$I$を現在構成されている独立点集合とすると，任意のサイズ$k$以下の部分集合$I' \subseteq I$ およびサイズ$k + 1$の
-部分集合$U \subseteq V\setminus I$について，$(I \setminus I') \cup U$が独立点集合となるかどうかを確認し，
-そのような$I'$，$U$が存在すれば$I$を更新することを繰り返すことで，最終的に$k$-MISを得ることができる．
-$k = O(1)$の場合この処理は$n$の多項式時間内で収まることが容易にわかる．一方で，この更新処理，すなわち，
-与えられた独立点集合$I$が既に$k$-MISを構成しているかどうか検証する問題が{\CONGEST}モデル上で効率的に
-解けるかどうかは明らかではない．そこで，本研究では$k$-MISの検証問題(verification)に着目し，その複雑性について
-議論を行う．具体的には，本研究は以下に挙げる結果を示す\Izumi{下に結果をitemizeの箇条書きでまとめる}．
-\begin{itemize}
-\item {\CONGEST}モデルにおいて，1-MIS検証問題は$O(1)$ラウンドで解くことができる．
-\item {\CONGEST}モデルにおいて，2-MIS検証問題には$\tilde{\Omega} (\sqrt{n})$ラウンドの下界が存在する．
-\item {\CONGEST}モデルにおいて，3-MIS検証問題には$\tilde{\Omega} (n)$ラウンドの下界が存在する．
-\item {\CONGEST}モデルにおいて，任意の$l \geq 1$に対して$k = 4l + 5$としたときに$k$-MIS検証問題には
-$\Omega\left(n^{2 - \frac{1}{l+1}}/l\right)$ラウンドの下界が存在する．
-\end{itemize}
+本研究では，最大独立点集合計算の複雑性理解に対して，近似解アルゴリズムとは異なる
+面からのアプローチを試みる．上述の最大独立点集合問題の近似に関する議論は，本質的に
+指数時間のローカル計算を許容したモデルを必要とするが，この仮定は必ずしも現実的
+とはいえない．そこで我々は，近似解の分散計算複雑性ではなく，(ある種の近傍の下での)局所
+最適解の複雑性に着目する．具体的には，$k$-極大独立集合($k$-Maximal Independet Set， $k$-MIS)の発見問題に対する{\CONGEST}モデルでのラウンド複雑性を検討する．$k$-極大独立集合を定義するために，高々$k$個の頂点を取り除き他の$k+1$頂点を追加することで独立集合の
+サイズを一つ増加させるという近傍探索を定義する，$k$-極大独立点集合は，この操作が適用不能な独立点集合として定義される．通常の極大独立点集合は，定義より$0$-MISであり，また通常の最大独立点集合は$n$-MISである．逐次計算においては，$k=O(1)$に対して，単純な局所探索により$k$-MISは多項式時間で計算可能であるため，{\CONGEST}アルゴリズムの文脈においても，この問題は多項式時間のローカル計算のみを許容するモデルにおいても取り扱うことが可能である．
+
+自然な局所探索に基づいて$k$-MISを構成しようとしたとき，与えられた独立点集合$I$が$k$-MIS，すなわち局所最適解かどうかを判定することが必要である．本研究ではこの判定問題($k$-MIS検証問題)に注目して，{\CONGEST}モデル上のでの
+ラウンド複雑性を検討する．
+
+\section{本研究の成果}
+本研究では，{\CONGEST}モデルにおける$k$-MIS懸賞問題に関して，以下の結果が成立することを示す．
+\begin{enumerate}
+\item 1-MIS検証問題を$O(1)$ラウンドで解くアルゴリズムが存在する．
+\item 2-MIS検証問題を解く任意のアルゴリズムはの最悪時実行ラウンド数は$\tilde{\Omega} (\sqrt{n})$となる．
+\item 3-MIS検証問題を解く任意のアルゴリズムの最悪時実行ラウンド数は$\tilde{\Omega}(n)$ラウンドとなる．
+\item 任意の自然数$\ell \geq 1$に対して，$(4\ell + 5)$-MIS検証問題を解く任意のアルゴリズムの
+最悪時実行ラウンド数は$\tilde{\Omega}\left((n^{2 - \frac{\ell}{\ell+1}})/\ell\right)$ラウンドとなる．
+\end{enumerate}
+
+\Izumi{上の一般のケースの下界の式はあっているか？$\ell$を大きくすると$\Omega(n)$に収束するのだが？あと，数式の$l$は，1との区別のために$\ell$を使うのが望ましい}
+上記の下界はすべて，定数成功確率の乱拓アルゴリズムについても成立する．4番目の下界の結果より，
+$K=\Omega(log n)$に対して
+最初に，1-MIS検証問題が$O(1)$ラウンドで解けることを証明した．
+次に，2-MIS検証問題に対する$\tilde{\Omega} (\sqrt{n})$ラウンドの下界と
+3-MIS検証問題に対する$\tilde{\Omega} (n)$ラウンドの下界を証明した．
+最後に，任意の$l \geq 1$に対して$k = 4l + 5$としたときに$k$-MIS検証問題に対する
+$\Omega\left(n^{2 - \frac{1}{l+1}}/l\right)$ラウンドの下界を証明した．
+特に，下界の証明のアイデアは2者間通信の枠組みにおける交叉判定問題からの帰着に基づいている．
+
+
 
 \section{関連研究} 
 {\CONGEST}モデルにおける最大独立集合問題の通信複雑性としては，最大重み付き独立集合の
@@ -150,31 +152,6 @@ $\Omega \left(\frac{n^{2 - 1/k}}{bk}\right)$の下界 \cite{fischer2018possibili
 近似最大クリーク$K_{l}$検出問題に対する$\Omega \left(\frac{n}{(l + \sqrt{n})b}\right)$の下界
  \cite{czumaj2020detecting}などが挙げられる．
 
-\Izumi{集中型アルゴリズムの近似不可能性の結果も，具体的な近似率限界を挙げて説明する．また，CONGEST上の
-極大独立点集合の結果(すなわち0-MISの結果)も挙げること．ｓ}
-
-\section{本研究の成果}
-今回，我々は$k$-MIS検証問題に対するいくつかの複雑性を示した．その結果を表\ref{tab: k-MIS}にまとめた．
-最初に，1-MIS検証問題が$O(1)$ラウンドで解けることを証明した．
-次に，2-MIS検証問題に対する$\tilde{\Omega} (\sqrt{n})$ラウンドの下界と
-3-MIS検証問題に対する$\tilde{\Omega} (n)$ラウンドの下界を証明した．
-最後に，任意の$l \geq 1$に対して$k = 4l + 5$としたときに$k$-MIS検証問題に対する
-$\Omega\left(n^{2 - \frac{1}{l+1}}/l\right)$ラウンドの下界を証明した．
-特に，下界の証明のアイデアは2者間通信の枠組みにおける交叉判定問題からの帰着に基づいている．
-
-\begin{table}[htb]
-  \begin{center}
-    \caption{本研究が示した$k$-MIS検証問題のラウンド複雑性}
-    \begin{tabular}{|c||c|c|c|c|} \hline
-      $k$ & 1 & 2 & 3 & $4l + 5$ \\ \hline
-      上界or下界 & 上界 & 下界 & 下界 & 下界 \\ \hline
-      結果 & $O(1)$ & $\tilde{\Omega} (\sqrt{n})$ & $\tilde{\Omega} (n)$ & $\Omega\left(n^{2 - \frac{1}{l+1}}/l\right)$ \\ \hline
-    \end{tabular}
-    \label{tab: k-MIS}
-  \end{center}
-\end{table}
-
-
 \section{論文の構成}
 本論文は全5章で構成される．第2章ではグラフの構造と用語の定義をしている．
 第3章では1-MIS検証問題に対する$O(1)$ラウンドアルゴリズムについて述べている．
@@ -184,11 +161,11 @@ $\Omega\left(n^{2 - \frac{1}{l+1}}/l\right)$ラウンドの下界を証明した
 \chapter{諸定義}
 
 \section{{\CONGEST}モデル}
-本研究で考える{\CONGEST}モデルは，単純無向連結グラフ$G = (V, E)$により表現される．ここで$V$はノードの集合で
-$|V| = n$とし，$E$は通信リンクの集合である．{\CONGEST}モデルでは計算機はラウンドに従って同期して動作するものとする．
+{\CONGEST}モデルにおいて，システムは単純無向連結グラフ$G =  (V,E)$により表現される．
+ここで$V$はノードの集合で $|V| = n$とし， $E$は通信リンクの集合である．{\CONGEST}モデルでは計算機は同期したラウンドに従って動作するものとする．
 1ラウンド内で，隣接頂点へのメッセージ送信，隣接頂点からのメッセージ受信，内部計算を行う.各辺は単位ラウンドあたり
 $b = O(\log n)$ビットを双方向に伝送可能であり，各ノードは同一ラウンドに異なる接続辺に異なるメッセージを
-送信可能である．また，各ノードには$O(\log n)$ビットの自然数値によるIDが付与されており，
+送信可能である．また，各ノードには$O(\log n)$ビットの整数値によるIDが付与されており，
 自身の隣接ノードすべてのIDを既知であるとする．各ノードはグラフのトポロジに関する事前知識を持たないものとする．
 
 \section{2者間通信複雑性}
