--- a/MT/M2sato.tex
+++ b/MT/M2sato.tex
@@ -373,9 +373,9 @@ $I^{x,y} : V^{x,y} \to \{0, 1\}$を構築する．このインスタンスにお
 インスタンス$(x, y)$の各ビットは$N\times N$の要素でインデックス付けされているものとする．$(i, j) \in N \times N$．でインデックス付けされている$x$，$y$のビットを$x_{i,j}$および$y_{i,j}$で表すものとする．また，$x$，$y$に含まれる1のビットの個数を$|x|$，$|y|$で表すとする．$G^{x,y}$の頂点集合$V^{x,y}$は以下の通りに定義される．
 \begin{align*}
 V^{x,y} &= A^1 \cup A^2 \cup B^1 \cup B^2 \cup K, \quad \quad \text{ここで}\\
-&\phantom{=} \quad A^j = \{a^{j}_{i} \mid 1\leq i \leq N, j\} 
+&\phantom{=} \quad A^j = \{a^{j}_{i} \mid 1\leq i \leq N, j\} \quad \quad
 \text{($j \in \{0, 1\}\}$)}, \\
-&\phantom{=} \quad B^j = \{a^{j}_{i} \mid 1\leq i \leq N, j\} 
+&\phantom{=} \quad B^j = \{a^{j}_{i} \mid 1\leq i \leq N, j\} \quad \quad
 \text{($j \in \{0, 1\}\}$)}, \\
 &\phantom{=} \quad C = \{c_{i,j} \mid y_{i,j} = 1\}．
 \end{align*}
