--- a/MT/M2sato.bib
+++ b/MT/M2sato.bib
@@ -88,4 +88,46 @@
   year={2019},
   organization={IEEE}
 }
+@incollection{bollobas1991generalised,
+  title={On generalised minimal domination parameters for paths},
+  author={Bollob{\'a}s, B{\'e}la and Cockayne, Ernest J and Mynhardt, Christina M},
+  booktitle={Annals of Discrete Mathematics},
+  volume={48},
+  pages={89--97},
+  year={1991},
+  publisher={Elsevier}
+}
+@inproceedings{frischknecht2012networks,
+  title={Networks cannot compute their diameter in sublinear time},
+  author={Frischknecht, Silvio and Holzer, Stephan and Wattenhofer, Roger},
+  booktitle={Proceedings of the twenty-third annual ACM-SIAM symposium on Discrete Algorithms},
+  pages={1150--1162},
+  year={2012},
+  organization={SIAM}
+}
+@inproceedings{bacrach2019hardness,
+  title={Hardness of distributed optimization},
+  author={Bacrach, Nir and Censor-Hillel, Keren and Dory, Michal and Efron, Yuval and Leitersdorf, Dean and Paz, Ami},
+  booktitle={Proceedings of the 2019 ACM Symposium on Principles of Distributed Computing},
+  pages={238--247},
+  year={2019}
+}
+@article{turau2007linear,
+  title={Linear self-stabilizing algorithms for the independent and dominating set problems using an unfair distributed scheduler},
+  author={Turau, Volker},
+  journal={Information Processing Letters},
+  volume={103},
+  number={3},
+  pages={88--93},
+  year={2007},
+  publisher={Elsevier}
+}
+@inproceedings{tanaka2019self,
+  title={A Self-stabilizing 1-Maximal Independent Set Algorithm},
+  author={Tanaka, Hideyuki and Sudo, Yuichi and Kakugawa, Hirotsugu and Masuzawa, Toshimitsu and Datta, Ajoy K},
+  booktitle={International Symposium on Stabilizing, Safety, and Security of Distributed Systems},
+  pages={338--353},
+  year={2019},
+  organization={Springer}
+}
 
