--- a/MT/M2sato.bib
+++ b/MT/M2sato.bib
@@ -122,12 +122,10 @@
   year={2007},
   publisher={Elsevier}
 }
-@inproceedings{tanaka2019self,
+@article{tanaka2019self,
   title={A Self-stabilizing 1-Maximal Independent Set Algorithm},
-  author={Tanaka, Hideyuki and Sudo, Yuichi and Kakugawa, Hirotsugu and Masuzawa, Toshimitsu and Datta, Ajoy K},
-  booktitle={International Symposium on Stabilizing, Safety, and Security of Distributed Systems},
-  pages={338--353},
-  year={2019},
-  organization={Springer}
+  author={Hideyuki Tanaka and Yuichi Sudo and Hirotsugu Kakugawa and Toshimitsu Masuzawa},
+  journal={Information Processing},
+  year={2020}
 }
 
