--- a/MT/M2sato.tex
+++ b/MT/M2sato.tex
@@ -690,7 +690,7 @@ $k$-MIS検証問題($k = 4\ell + 5, \ell \geq 1$)に対する$\tilde{\Omega}\lef
 
 \section{今後の課題}
 4.3節で一般の$k$に対する$k$-MIS検証問題の下界を証明したが，$k = 4,...,8$については現在
-$k=3$同じ下界しか得られていない．この下界をよりタイトにできるかが今後の課題である．
+$k=3$と同じ下界しか得られていない．この下界をよりタイトにできるかが今後の課題である．
 \newpage
 
 \chapter*{謝辞}
