--- a/MT/M2sato.tex
+++ b/MT/M2sato.tex
@@ -524,10 +524,10 @@ $y_{i, j} = 1$のときのみであるが，これは$\mathrm{DISJ}_{N \times N}
 独立集合から3点取り除いて4点追加することはできないため，この独立集合は3-MISである．
 
 今回，$N \times N$ビットの交叉判定インスタンスをグラフに埋め込んでおり，
-カット辺のサイズ$|\mathit{Cut}| = 6N$であることが分かる．
+カット辺のサイズ$|\mathit{Cut}| = 4N$であることが分かる．
 {\CONGEST}モデルにおいてグラフ上に与えられた独立集合が3-MISであるかどうかを$r$ラウンドで判定する
 アルゴリズム$\mathcal{A}$が存在したとすると，定理\ref{lower}より$\mathcal{A}$は少なくとも
-$r = \Omega (N \times N/ 6N \cdot \log n) = \tilde{\Omega}(N)$ラウンドを必要とする．図\ref{3_G(x,y)}から分かる通り，
+$r = \Omega (N \times N/ 4N \cdot \log n) = \tilde{\Omega}(N)$ラウンドを必要とする．図\ref{3_G(x,y)}から分かる通り，
 $s$は1頂点，$A^{1}, A^{2}, B^{1}, B^{2}, C^{1}, C^{2}$はそれぞれ$N$頂点で構成されているため，
 グラフ全体の頂点数$n$は$n = O(N)$である．
 したがって$N = \Omega(n)$になるため，$\tilde{\Omega}(n)$ラウンドの下界を得ることができる． \qed
@@ -711,7 +711,7 @@ $k$-MIS検証問題($k = 4\ell + 5, \ell \geq 1$)に対する$\tilde{\Omega}\lef
 \section{今後の課題}
 4.3節で一般の$k$に対する$k$-MIS検証問題の下界を証明したが，$k = 4,...,8$については現在
 $k=3$と同じ下界しか得られていない．この下界をよりタイトにできるかが今後の課題である．
-また，$1-MIS$が小定数$\epsilon > 0$に対して$\Omega(n^{\epsilon})$ラウンドの下界を持つかどうかは未解決であるが，
+また，1-MIS問題が小定数$\epsilon > 0$に対して$\Omega(n^{\epsilon})$ラウンドの下界を持つかどうかは未解決であるが，
 この下界を本稿で提案した手法に基づいて証明することは困難であり，
 可能であるとするならば何らかの新たな証明手法が必要と思われる．また上界に関しては，$k=1$，$k=2$であっても，
 現在知られている最速のアルゴリズムは$O(n)$ラウンドであり，$n$に関して劣線形時間のアルゴリズムが得られるかどうかは
