--- a/MT/M2sato.tex
+++ b/MT/M2sato.tex
@@ -49,7 +49,7 @@
 % タイトル
 %\gradyear{2020}
 \papertitleJP{$k$-極大独立点集合検証問題の \\ 分散計算複雑性}
-\papertitleEN{Distributed Complexity of $k$-Maximal \\ Independent Set Verification}
+\papertitleEN{(Distributed Complexity of $k$-Maximal \\ Independent Set Verification)}
 \studentID{31414050}
 \degree{master}
 \program{cs}
@@ -726,9 +726,12 @@ $k=3$と同じ下界しか得られていない．この下界をよりタイト
 \newpage
 
 \chapter*{謝辞}
-本研究の機会を与え，数々の御指導を賜りました泉泰介准教授に深く感謝致します．
-また，本研究を進めるにあたり多くの助言を頂き，様々な御協力を頂きました泉研究室
-の学生のみなさんに深く感謝致します．
+本研究の機会を与え，数々の御指導を賜りました片山喜章教授に深く感謝いたします．
+本研究を行うにあたり，多大な御指導，ご鞭撻を頂きました金鎔煥助教，
+大阪大学の泉泰介准教授に深く感謝いたします．本論文をご精読頂きました和田山正教授に深く感謝いたします．
+また，本研究を進めるにあたり多くの助言を頂き，様々な御協力を頂きました片山研究室
+の学生のみなさんに深く感謝いたします．特に本研究の内容に関して多くのアイデアを提案いただいた
+北村直暉さんに深く感謝いたします．
 
 \newpage
 
