--- a/MT/M2sato.tex
+++ b/MT/M2sato.tex
@@ -703,7 +703,7 @@ $r = \Omega \left(N \times N/2(\ell + 1) \cdot N^{1/(\ell + 1)} \cdot \log n\rig
 $s$は1頂点，任意の$1\leq j \leq \ell+1, h \in \{1, 2\})$に対して頂点集合$A^{h}, B^{h}_{j}$はそれぞれ$N$頂点で，
 $C^{h}_{j},D^{h}_{j},E^{h}_{j}$の頂点集合はそれぞれ$M=N^{1/(\ell + 1)}$頂点で構成されているため，
 グラフ全体の頂点数$n$は$n = O(N)$である．したがって$N = \Omega(n)$になるため，
-$\tilde{\Omega}\left(n^{2 - \frac{1}{\ell + 1}}/\ell \right)$ラウンドの下界を得ることができる．
+$\tilde{\Omega}\left(n^{2 - \frac{1}{\ell + 1}}/\ell \right)$ラウンドの下界を得ることができる． \qed
 \end{prf*}
 \newpage
 
