アブストテンプレートを置いた

--- a/MT/abst_MT/thesis_abst.sty
+++ b/MT/abst_MT/thesis_abst.sty
@@ -1,7 +1,7 @@
 % This is an environment for writing abstruct of thesis.
-% C˜_‚Æ‘²˜_‚ÌƒXƒ^ƒCƒ‹‚ğ“ˆê  Sun Jan 18 2004 ‰F²Œ©¯ŒÜ—“à Œ¤
-% ˜gü‚È‚Çˆê•”ˆÈŠOC‘S–Ê‰ü’ù  Fri Jan 16 2004 ‰F²Œ©¯ŒÜ—“à Œ¤
-% î•ñHŠw‰È‘²‹ÆŒ¤‹†—p‚É‰ü’ù  Mon Jan 7 2008 ’†‘º—ˆÉ“¡Œ¤
+% ä¿®è«–ã¨å’è«–ã®ã‚¹ã‚¿ã‚¤ãƒ«ã‚’çµ±ä¸€  Sun Jan 18 2004 å®‡ä½è¦‹åº„äº”ï¼ å†…åŒ ç ”
+% æ ç·šãªã©ä¸€éƒ¨ä»¥å¤–ï¼Œå…¨é¢æ”¹è¨‚  Fri Jan 16 2004 å®‡ä½è¦‹åº„äº”ï¼ å†…åŒ ç ”
+% æƒ…å ±å·¥å­¦ç§‘å’æ¥­ç ”ç©¶ç”¨ã«æ”¹è¨‚  Mon Jan 7 2008 ä¸­æ‘ï¼ ä¼Šè—¤ç ”
 %
 % This is an environment for writing abstruct of master's thesis.
 % 11 Apr 88, last modified 2 Dec 88
@@ -10,12 +10,12 @@
 % by Kenichi Tsukamoto, Feb 1997.
 % $Id: shuronabst.sty,v 1.5 1997-02-10 14:28:04+09 tsuka Exp $
 
-\typeout{Document Style '‘²‹Æ(Cm)˜_•¶ŠT—v'. }
+\typeout{Document Style 'å’æ¥­(ä¿®å£«)è«–æ–‡æ¦‚è¦'. }
 
 
 \def\baselinestretch{1}
 
-% margin ‚È‚é‚×‚­texƒtƒ@ƒCƒ‹“à‚Åaddtolength‚Å•ÏX‚µ‚Ä‰º‚³‚¢
+% margin ãªã‚‹ã¹ãtexãƒ•ã‚¡ã‚¤ãƒ«å†…ã§addtolengthã§å¤‰æ›´ã—ã¦ä¸‹ã•ã„
 \oddsidemargin 11pt
 \evensidemargin -23pt
 
@@ -23,25 +23,25 @@
 \textwidth 461pt
 \textheight 722pt
 \marginparwidth 70pt \marginparsep 11pt \marginparpush 5pt
-\topmargin -36pt  %•ÏX‚·‚é‚Æ˜g‚²‚Æ“®‚­
+\topmargin -36pt  %å¤‰æ›´ã™ã‚‹ã¨æ ã”ã¨å‹•ã
 \headheight 14pt \headsep    20pt
-\columnsep 10pt \columnseprule 0pt %’i‘gŠÔ‹——£C’i‘gü‘¾‚³
+\columnsep 10pt \columnseprule 0pt %æ®µçµ„é–“è·é›¢ï¼Œæ®µçµ„ç·šå¤ªã•
 \raggedbottom
 
-\floatsep 6pt plus 1pt minus 2pt        %}•\ŠÔ‹——£
-\textfloatsep 10pt plus 1pt minus 3pt   %}•\‚Æ–{•¶‚Ì‹——£[tb]
-\intextsep 6pt plus 1pt minus 2pt       %}•\‚Æ–{•¶‚Ì‹——£[h]
-\dblfloatsep 6pt plus 1pt minus 2pt     %2’i‚Ô‚¿”²‚«}•\‚Ìê‡
-\dbltextfloatsep 10pt plus 1pt minus 3pt%2’i‚Ô‚¿”²‚«}•\‚Ìê‡
+\floatsep 6pt plus 1pt minus 2pt        %å›³è¡¨é–“è·é›¢
+\textfloatsep 10pt plus 1pt minus 3pt   %å›³è¡¨ã¨æœ¬æ–‡ã®è·é›¢[tb]
+\intextsep 6pt plus 1pt minus 2pt       %å›³è¡¨ã¨æœ¬æ–‡ã®è·é›¢[h]
+\dblfloatsep 6pt plus 1pt minus 2pt     %2æ®µã¶ã¡æŠœãå›³è¡¨ã®å ´åˆ
+\dbltextfloatsep 10pt plus 1pt minus 3pt%2æ®µã¶ã¡æŠœãå›³è¡¨ã®å ´åˆ
 
 \def\section{
  \@startsection
   {section}
-  {1}                           %Œ©o‚µ•\¦ƒŒƒxƒ‹
-  {0pt}                         %ƒy[ƒW¶’[‚©‚çŒ©o‚µ‚Ü‚Å‚Ì‹——£
-  {.75ex plus .25ex minus .25ex}%Œ©o‚µã‚Ì‹ó‚«i‚È‚µj
-  {.3ex plus .15ex minus .15ex} %Œ©o‚µ‰º‚Ì‹ó‚«
-  {\large\bf}}                  %Œ©o‚µ‚Ì•¶š
+  {1}                           %è¦‹å‡ºã—è¡¨ç¤ºãƒ¬ãƒ™ãƒ«
+  {0pt}                         %ãƒšãƒ¼ã‚¸å·¦ç«¯ã‹ã‚‰è¦‹å‡ºã—ã¾ã§ã®è·é›¢
+  {.75ex plus .25ex minus .25ex}%è¦‹å‡ºã—ä¸Šã®ç©ºãï¼ˆãªã—ï¼‰
+  {.3ex plus .15ex minus .15ex} %è¦‹å‡ºã—ä¸‹ã®ç©ºã
+  {\large\bf}}                  %è¦‹å‡ºã—ã®æ–‡å­—
 \def\subsection{
  \@startsection
   {subsection}{2}{0pt}{.5ex plus .25ex minus .25ex}
@@ -49,12 +49,12 @@
 \def\subsubsection{
  \@startsection
   {subsubsection}{3}{0pt}{.5ex plus .25ex minus .25ex}
-  {-1em}                        %‰üs‚¹‚¸
+  {-1em}                        %æ”¹è¡Œã›ãš
   {\normalsize\bf}}
-%paragraphˆÈ‰º‚Íg—p‚µ‚È‚¢‘O’ñ‚Å’è‹`‚¹‚¸B
-\setcounter{secnumdepth}{3} %Œ©o‚µ‚ğ•\¦‚·‚éÅ‘åƒŒƒxƒ‹
+%paragraphä»¥ä¸‹ã¯ä½¿ç”¨ã—ãªã„å‰æã§å®šç¾©ã›ãšã€‚
+\setcounter{secnumdepth}{3} %è¦‹å‡ºã—ã‚’è¡¨ç¤ºã™ã‚‹æœ€å¤§ãƒ¬ãƒ™ãƒ«
 
-%ˆÈ‰º‚Ílist(itemize,enumerate,description)—p‚Ìİ’è
+%ä»¥ä¸‹ã¯list(itemize,enumerate,description)ç”¨ã®è¨­å®š
 \leftmargini=1.5zw
 \leftmarginii=1.5zw
 \leftmarginiii=1.25zw
@@ -86,20 +86,20 @@
  \topsep=0pt plus 1pt minus 0pt
  \parsep=\z@}
 
-\long\def\@makecaption#1#2{ %}‚Æ•\‚ÌƒLƒƒƒvƒVƒ‡ƒ“İ’è
- \vskip 1pt                 %}‚ÆƒLƒƒƒvƒVƒ‡ƒ“‚Ì‹——£
+\long\def\@makecaption#1#2{ %å›³ã¨è¡¨ã®ã‚­ãƒ£ãƒ—ã‚·ãƒ§ãƒ³è¨­å®š
+ \vskip 1pt                 %å›³ã¨ã‚­ãƒ£ãƒ—ã‚·ãƒ§ãƒ³ã®è·é›¢
  \setbox\@tempboxa\hbox{#1: #2}
  \ifdim \wd\@tempboxa >\hsize
   #1: #2\par
  \else
   \hbox to\hsize{\hfil\box\@tempboxa\hfil}
  \fi
- \vskip 2pt}                %ƒLƒƒƒvƒVƒ‡ƒ“‚Æ•\‚Ì‹——£
-\def\fps@figure{bt}         %ˆÊ’uw’è‚Ì‚È‚¢}‚Íb‚©t
-\def\fps@table{bt}          %ˆÊ’uw’è‚Ì‚È‚¢•\‚Íb‚©t
+ \vskip 2pt}                %ã‚­ãƒ£ãƒ—ã‚·ãƒ§ãƒ³ã¨è¡¨ã®è·é›¢
+\def\fps@figure{bt}         %ä½ç½®æŒ‡å®šã®ãªã„å›³ã¯bã‹t
+\def\fps@table{bt}          %ä½ç½®æŒ‡å®šã®ãªã„è¡¨ã¯bã‹t
 
-\def\thebibliography#1{ %Ql•¶Œ£‚Í¬‚³‚ß‚É
- \subsection*{Ql•¶Œ£\@mkboth{Ql•¶Œ£}{Ql•¶Œ£}}
+\def\thebibliography#1{ %å‚è€ƒæ–‡çŒ®ã¯å°ã•ã‚ã«
+ \subsection*{å‚è€ƒæ–‡çŒ®\@mkboth{å‚è€ƒæ–‡çŒ®}{å‚è€ƒæ–‡çŒ®}}
  \small
  \list{[\arabic{enumi}]}
   {\settowidth{\labelwidth}{[#1]}
@@ -112,7 +112,7 @@
  \sfcode`\.=1000\relax}
 \let\endthebibliography=\endlist
 
-\def\eqnarray{ %”®‚Å&=&‚Ì¶‰E‚Ì‹ó‚ğ–h‚®
+\def\eqnarray{ %æ•°å¼ã§&=&ã®å·¦å³ã®ç©ºã‚’é˜²ã
  \stepcounter{equation}
  \let\@currentlabel=\theequation
  \global\@eqnswtrue
@@ -125,85 +125,85 @@
  &\global\@eqcnt\tw@$\displaystyle\tabskip\z@{##}$\hfil
  \tabskip\@centering&\llap{##}\tabskip\z@\cr}
 
-%‚±‚±‚©‚ç‰º‚ªƒAƒuƒXƒg˜g‚Ìİ’è
+%ã“ã“ã‹ã‚‰ä¸‹ãŒã‚¢ãƒ–ã‚¹ãƒˆæ ã®è¨­å®š
 %
-\def\í•Ê#1{\def\@í•Ê{#1}}         %‘²‹Æ‚Ü‚½‚ÍCm
-\def\ŠwĞ”Ô†#1{\def\@ŠwĞ”Ô†{#1}} %\def\@ŠwĞ”Ô†{}
-\def\–¼#1{\def\@–¼{#1}}         %\def\@–¼{}
-\def\‰pŒê–¼#1{\def\@‰pŒê–¼{#1}} %\def\@‰pŒê–¼{}
-\def\Œ¤‹†º#1{\def\@Œ¤‹†º{#1}}     %\def\@Œ¤‹†º{}
-\def\Œn#1{\def\@Œn{#1}}     %\def\@Œn{}
-\def\‘è–Ú#1{\long\def\@‘è–Ú{#1}}    %\def\@‘è–Ú{}
-\def\”N“x#1{\def\@”N“x{#1}}         %\def\@”N“x{} %!= ”N
+\def\ç¨®åˆ¥#1{\def\@ç¨®åˆ¥{#1}}         %å’æ¥­ã¾ãŸã¯ä¿®å£«
+\def\å­¦ç±ç•ªå·#1{\def\@å­¦ç±ç•ªå·{#1}} %\def\@å­¦ç±ç•ªå·{}
+\def\æ°å#1{\def\@æ°å{#1}}         %\def\@æ°å{}
+\def\è‹±èªæ°å#1{\def\@è‹±èªæ°å{#1}} %\def\@è‹±èªæ°å{}
+\def\ç ”ç©¶å®¤#1{\def\@ç ”ç©¶å®¤{#1}}     %\def\@ç ”ç©¶å®¤{}
+\def\ç³»#1{\def\@ç³»{#1}}     %\def\@ç³»{}
+\def\é¡Œç›®#1{\long\def\@é¡Œç›®{#1}}    %\def\@é¡Œç›®{}
+\def\å¹´åº¦#1{\def\@å¹´åº¦{#1}}         %\def\@å¹´åº¦{} %!= å¹´
 \newcount\@unt@ \newcount\@@unt@
 
-\def\stop˜_•¶ŠT—v{}
+\def\stopè«–æ–‡æ¦‚è¦{}
 \def\returnaddress{}
 
-\newif\if˜_•¶error \˜_•¶errorfalse
-\def\@ƒ^ƒCƒgƒ‹ƒ`ƒFƒbƒN#1{%
+\newif\ifè«–æ–‡error \è«–æ–‡errorfalse
+\def\@ã‚¿ã‚¤ãƒˆãƒ«ãƒã‚§ãƒƒã‚¯#1{%
   \@for\p@r@m:=#1\do{\expandafter
     \ifx\csname @\p@r@m\endcsname\relax
-    \typeout{u\p@r@mv‚ªw’è‚³‚ê‚Ä‚¢‚Ü‚¹‚ñ}\˜_•¶errortrue\fi}
-  \if˜_•¶error
-  \errmessage{–¢’è‹`‚Ìƒ^ƒCƒgƒ‹€–Ú‚ª‚ ‚è‚Ü‚·}\else\relax\fi}
+    \typeout{ã€Œ\p@r@mã€ãŒæŒ‡å®šã•ã‚Œã¦ã„ã¾ã›ã‚“}\è«–æ–‡errortrue\fi}
+  \ifè«–æ–‡error
+  \errmessage{æœªå®šç¾©ã®ã‚¿ã‚¤ãƒˆãƒ«é …ç›®ãŒã‚ã‚Šã¾ã™}\else\relax\fi}
 
-\long\def\˜_•¶ŠT—v{%
-%  \@ƒ^ƒCƒgƒ‹ƒ`ƒFƒbƒN{í•Ê,ŠwĞ”Ô†,–¼,‰pŒê–¼,Œ¤‹†º,‘è–Ú,”N“x}
-  \@ƒ^ƒCƒgƒ‹ƒ`ƒFƒbƒN{í•Ê,ŠwĞ”Ô†,–¼,Œ¤‹†º,‘è–Ú,”N“x}
+\long\def\è«–æ–‡æ¦‚è¦{%
+%  \@ã‚¿ã‚¤ãƒˆãƒ«ãƒã‚§ãƒƒã‚¯{ç¨®åˆ¥,å­¦ç±ç•ªå·,æ°å,è‹±èªæ°å,ç ”ç©¶å®¤,é¡Œç›®,å¹´åº¦}
+  \@ã‚¿ã‚¤ãƒˆãƒ«ãƒã‚§ãƒƒã‚¯{ç¨®åˆ¥,å­¦ç±ç•ªå·,æ°å,ç ”ç©¶å®¤,é¡Œç›®,å¹´åº¦}
   \newpage
   \pagestyle{plain} \thispagestyle{firstpage}
-  \c@page\@ne \@@@˜_•¶ŠT—v %\vspace*{0.5cm} texƒtƒ@ƒCƒ‹‚Å‹ó‚¯‚é—l•ÏXB
+  \c@page\@ne \@@@è«–æ–‡æ¦‚è¦ %\vspace*{0.5cm} texãƒ•ã‚¡ã‚¤ãƒ«ã§ç©ºã‘ã‚‹æ§˜å¤‰æ›´ã€‚
   \interlinepenalty=200}
-\def\end˜_•¶ŠT—v{\stop˜_•¶ŠT—v\@@par\pagebreak\@@par}
+\def\endè«–æ–‡æ¦‚è¦{\stopè«–æ–‡æ¦‚è¦\@@par\pagebreak\@@par}
 
-\def\@˜_•¶ŠT—vƒwƒbƒ_{\bf
-%%  •½ ¬\ \@”N“x\ ”N “x\hspace{3zw}\@í•Ê\  ˜_ •¶ ŠT —v}
-  •½ ¬\ \@”N“x\ ”N “x\hspace{3zw}\@í•Ê\  Œ¤ ‹† ŠT —v}
+\def\@è«–æ–‡æ¦‚è¦ãƒ˜ãƒƒãƒ€{\bf
+%%  ä»¤ å’Œ\ \@å¹´åº¦\ å¹´ åº¦\hspace{3zw}\@ç¨®åˆ¥\  è«– æ–‡ æ¦‚ è¦}
+  ä»¤ å’Œ\ \@å¹´åº¦\ å¹´ åº¦\hspace{3zw}\@ç¨®åˆ¥\  è«– æ–‡ æ¦‚ è¦}
 
-\def\@˜_•¶ŠT—v{%
+\def\@è«–æ–‡æ¦‚è¦{%
   \vbox to \headheight{
     \hbox to \textwidth{\hss
       \def\arraystretch{1}
 %%      \begin{tabular}{|p{9cm}|p{4.0cm}p{3.0cm}|}
       \begin{tabular}{|p{9cm}|p{3cm}|p{4cm}|}
-        \hline \multicolumn{3}{|c|}{\@˜_•¶ŠT—vƒwƒbƒ_} \\ \hline
-%%        & \hspace*{.3cm}\@Œ¤‹†º & \@–¼ \\ \cline{2-3}
-%%        & \hspace*{.3cm}\@Œ¤‹†º (\@Œn Œn) & \@–¼ \\ \cline{2-3}
-%%        & \hspace*{.3cm}\@Œ¤‹†º Œ¤‹†º & \@–¼ \\ \cline{2-3}
-        & \hspace*{.3cm}\@Œn Œn & \@Œ¤‹†º Œ¤‹†º\\ \cline{2-3}
+        \hline \multicolumn{3}{|c|}{\@è«–æ–‡æ¦‚è¦ãƒ˜ãƒƒãƒ€} \\ \hline
+%%        & \hspace*{.3cm}\@ç ”ç©¶å®¤ & \@æ°å \\ \cline{2-3}
+%%        & \hspace*{.3cm}\@ç ”ç©¶å®¤ (\@ç³» ç³») & \@æ°å \\ \cline{2-3}
+%%        & \hspace*{.3cm}\@ç ”ç©¶å®¤ ç ”ç©¶å®¤ & \@æ°å \\ \cline{2-3}
+        & \hspace*{.3cm}\@ç³» åˆ†é‡ & \@ç ”ç©¶å®¤ ç ”ç©¶å®¤\\ \cline{2-3}
         \hfil\raise 8pt \hbox{\smash{%
-            \begin{minipage}{8.5cm}\centering\@‘è–Ú
+            \begin{minipage}{8.5cm}\centering\@é¡Œç›®
           \end{minipage}}} \hfil
-%        & \hspace*{.3cm}No. \@ŠwĞ”Ô† & \@‰pŒê–¼ \\ \hline
-%%        & \hspace*{.3cm}ŠwĞ”Ô† & No. \@ŠwĞ”Ô† \\ \hline
-%%        & \hspace*{.3cm}\@Œn Œn & No. \@ŠwĞ”Ô† \\ \hline
-%%%        & \hspace*{.3cm}No. \@ŠwĞ”Ô† & \@–¼ \\ \hline
-        & \multicolumn{1}{|l}{\hspace*{.3cm}No. \@ŠwĞ”Ô†} &
-        \multicolumn{1}{l|}{\@–¼} \\ \hline
+%        & \hspace*{.3cm}No. \@å­¦ç±ç•ªå· & \@è‹±èªæ°å \\ \hline
+%%        & \hspace*{.3cm}å­¦ç±ç•ªå· & No. \@å­¦ç±ç•ªå· \\ \hline
+%%        & \hspace*{.3cm}\@ç³» ç³» & No. \@å­¦ç±ç•ªå· \\ \hline
+%%%        & \hspace*{.3cm}No. \@å­¦ç±ç•ªå· & \@æ°å \\ \hline
+        & \multicolumn{1}{|l}{\hspace*{.3cm}No. \@å­¦ç±ç•ªå·} &
+        \multicolumn{1}{l|}{\@æ°å} \\ \hline
         \multicolumn{3}{|c|}{\vrule height 10in width 0pt}
-        \\ \hline %˜gü
+        \\ \hline %æ ç·š
       \end{tabular}\hss}\vss}}
 
-\def\@@@˜_•¶ŠT—v{{%
+\def\@@@è«–æ–‡æ¦‚è¦{{%
     \setbox0=\hbox to \textwidth{\hss
       \global\@unt@=1\global\@@unt@=1
       \@setsize\small{10pt}\ixpt\@ixpt}} \def\footnoterule{}}
 
-\def\@@˜_•¶ŠT—v{%
+\def\@@è«–æ–‡æ¦‚è¦{%
   \dimen0 9.743in
   \advance\dimen0\headheight
   \advance\dimen0\headsep
   \vbox to \headheight{\hbox to \textwidth{\hss
       \begin{tabular}{@{\vrule}p{17.26cm}@{\vrule}} \hline \hfil
-        \@˜_•¶ŠT—vƒwƒbƒ_ \hfil\\
+        \@è«–æ–‡æ¦‚è¦ãƒ˜ãƒƒãƒ€ \hfil\\
         \hline \hbox{\vrule width 0pt height \dimen0}\\ \hline
       \end{tabular}\hss}\vss}}
 
-\def\ps@firstpage{\def\@oddhead{\@˜_•¶ŠT—v}\def\@oddfoot{}
-  \def\@evenhead{\@˜_•¶ŠT—v}\def\@evenfoot{}}
-\def\ps@plain{\def\@oddhead{\@@˜_•¶ŠT—v}\def\@oddfoot{}
-  \def\@evenhead{\@@˜_•¶ŠT—v}\def\@evenfoot{}}
+\def\ps@firstpage{\def\@oddhead{\@è«–æ–‡æ¦‚è¦}\def\@oddfoot{}
+  \def\@evenhead{\@è«–æ–‡æ¦‚è¦}\def\@evenfoot{}}
+\def\ps@plain{\def\@oddhead{\@@è«–æ–‡æ¦‚è¦}\def\@oddfoot{}
+  \def\@evenhead{\@@è«–æ–‡æ¦‚è¦}\def\@evenfoot{}}
 
 \endinput % thesis_abst.sty ends here.
 
