--- a/MT/abst_MT/thesis_abst.sty
+++ b/MT/abst_MT/thesis_abst.sty
@@ -17,7 +17,7 @@
 
 % margin なるべくtexファイル内でaddtolengthで変更して下さい
 \oddsidemargin 11pt
-\evensidemargin -23pt
+\evensidemargin \oddsidemargin
 
 % text size
 \textwidth 461pt
