アブスト完成

--- a/MT/abst_MT/M2sato_abst.bib
+++ b/MT/abst_MT/M2sato_abst.bib
@@ -35,3 +35,13 @@
   year={1991},
   publisher={Elsevier}
 }
+@article{kalyanasundaram1992probabilistic,
+  title={The probabilistic communication complexity of set intersection},
+  author={Kalyanasundaram, Bala and Schintger, Georg},
+  journal={SIAM Journal on Discrete Mathematics},
+  volume={5},
+  number={4},
+  pages={545--557},
+  year={1992},
+  publisher={SIAM}
+}
